--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,11 +13,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
+        android:theme="@style/Theme.App.Starting"
         tools:targetApi="31">
         <activity
             android:name=".ui.view.MainActivity"
             android:label="Minecraft Repository"
+            android:theme="@style/Theme.App.Starting"
             android:exported="true"
             android:windowSoftInputMode="adjustPan">
             <intent-filter>
